<resources>
    <!--ACTIVIDAD MAIN-->
    <string name="app_name">Zombies Kill</string>
    <string name="BTNLOGIN">login</string>
    <string name="BTNREGISTRO">Registro</string>
    <!--ACTIVIDAD REGISTRO-->
    <string name="correoEt">Correo Electrónico</string>
    <string name="passEt">Contraseña</string>
    <string name="nombreEt">Nombre</string>
    <string name="fechaTxt">Fecha</string>
    <string name="Registrar">Registrar</string>
    <!--ACTIVIDAD LOGIN-->
    <string name="correoLogin">Correo Electrónico</string>
    <string name="passLogin">Contraseña</string>
    <string name="BntLogin">Ingresar</string>
    <!--ACTIVIDAD MENU-->
    <string name="MiPOuntuaciontxt">Mi Puntuacion</string>
    <string name="Zombies"> -- </string>
    <string name="uid">--</string>
    <string name="correo"> -- </string>
    <string name="nombre"> -- </string>
    <string name="fecha"> -- </string>
    <string name="Menutxt">Menu</string>

    <string name="JugarBtn">Jugar</string>
    <string name="PuntuacionesBtn">Puntuaciones</string>
    <string name="AcercaDeBtn">Acerca de</string>
    <string name="CerrarSesionBtn">Cerrar Sesion</string>

    <!--ESCENARIO-->

    <string name="TvContador"> 0 </string>
    <string name="TvNombre"> ---- </string>
    <string name="TvTiempo"> 0S </string>

    <!--PANTALLA-->

    <string name="AnchoTv"> -- </string>
    <string name="AltoTv"> -- </string>
</resources>