<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <EditText
            android:id="@+id/correoEt"
            android:text="@string/correoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no">
        </EditText>

        <EditText
            android:id="@+id/passEt"
            android:text="@string/passEt"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:importantForAutofill="no">
        </EditText>

        <EditText
            android:id="@+id/nombreEt"
            android:text="@string/nombreEt"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:importantForAutofill="no">
        </EditText>

        <EditText
            android:id="@+id/fechaTxt"
            android:text="@string/fechaTxt"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

        <Button
            android:id="@+id/Registrar"
            android:text="@string/Registrar"
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>