<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/correoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correoLogin"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passLogin"
                android:layout_marginTop="10dp"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/BtnLogin"
            android:text="@string/BntLogin"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>